tweaked code for image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <td>
-      <img src="images\roche.jpg" alt="Profile Pic" height="175px" width="175px">
+      <img src="images/roche.jpg" alt="Profile Pic" height="175px" width="175px">
     </td>
     <td>
       <h1>Roche Foe-Aman</h1>
